--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Login</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body>
+{% extends 'base/main.html' %}
+{% block content %}
+{% load static%}
     <h1>Login</h1>
     <form method="POST">
        {% csrf_token %}
@@ -16,5 +8,4 @@
        <input type="submit" value="Login">
     </form>
     <p>Don't have an account?<a href="{% url 'register' %}" > Register</a></p>
-</body>
-</html>
+{% endblock content %}
