--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Login</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body>
+{% extends 'base/main.html' %}
+{% block content %}
+{% load static%}
     <h1>Register</h1>
     <form method="POST">
        {% csrf_token %}
        {{form.as_p}}
        <input type="submit" value="Register">
     </form>
-    <p>Already have an account?<a href="" > Login</a></p>
-</body>
-</html>
+    <p>Already have an account?<a href="{% url 'login' %}" > Login</a></p>
+{% endblock content %}
