--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirm delete</title>
-</head>
-<a href="{% url 'tasks' %}">   << Go back </a>
-<body>
+{% extends 'base/main.html' %}
+
+{% block content %}
+<a href="{% url 'tasks' %}"> << Go back </a>
+<br>
+
+{% block title %}<h2>Confirm delete</h2>{% endblock title %}
     <form method="POST"> {% csrf_token %}
         <p>Are you sure you want to delete this task? "{{task}}" </p>
         <input type="submit" value="Confirm">
     </form>
-</body>
-</html>
+{% endblock content %}
