--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,21 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-{% if request.user.is_authenticated %}
-        <p>Welcome, {{request.user}}!</p>
-        <a href="{% url 'logout' %}"> Logout</a>
-{% else %}
-    <a href='{% url 'login' %}'>Login</a>
-{% endif %}
+{% extends 'base/main.html' %}
+{% load static%}
+{% block content %}
 
-    <hr>
-    <title>Todo List</title>
-</head>
-<body>
+<div class="header-bar">
+    <div>
+        <h1>Hello {{request.user|title}}!</h1>
+        <h3 style="margin:0">You have <i>{{count}}</i> incomplete task{{ count|pluralize:"s" }}</h3>
+    </div>
+
+
+
+{% if request.user.is_authenticated %}
+<a href="{% url 'logout' %}"> Logout</a>
+{% else %}
+<a href='{% url 'login' %}'>Login</a>
+{% endif %}
+</div>
+
+<hr>
+{% block title %}<h2>My to do list</h2>{% endblock title %}
+
+
     <a href='{% url 'task-create' %}'>Create Task</a>
+    <form method='GET'>
+        <input type="text" name="search-area" value="{{search_input}}">
+        <input type="submit" value="Submit">
+
+    </form>
     <table>
         <tr>
             <th>Item</th>
@@ -26,7 +37,9 @@
         {% for task in tasks %}
             <tr>
                 <td>{{task.title}}</td>
-                <td><a href="{% url 'task' task.id %}">View</a></td>
+                <td>
+                <td>
+                <td>   
                 <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
                 <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
             </tr>
@@ -35,5 +48,4 @@
         {% endfor %}
 
     </table>
-</body>
-</html>
+{% endblock content %}
